Update and rename site5.html to index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/site5-training.css">
-    <link rel="stylesheet" href="/reset.css">
+    <link rel="stylesheet" href="site5-training.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
 <body>
         <div class="container">
@@ -15,7 +15,7 @@
                     <div class="burger__menu-block">
                         <div class="burder__box">
                             <div class="burger__img-block">
-                                <img class="burder__img" src="/site5/img/Frame1.png" alt="">
+                                <img class="burder__img" src="img/Frame1.png" alt="">
                             </div>
                             <div class="burger__X-box">
                                 <div class="burder__X X-1"></div>
@@ -30,9 +30,9 @@
                                     <li class="burger__li">ARTISTS</li>
                                     <li class="burger__li">BLOG</li>
                                     <li class="burger__li">
-                                    <img src="/site5/img/Vector.png" alt="">
-                                    <img src="/site5/img/Vector-inst.png" alt="">
-                                    <img src="/site5/img/Frame-twiter.png" alt=""></li>
+                                    <img src="img/Vector.png" alt="">
+                                    <img src="img/Vector-inst.png" alt="">
+                                    <img src="img/Frame-twiter.png" alt=""></li>
                                 </ul>
                                 <div class="burger__hr"></div>
                             </div>
@@ -57,7 +57,7 @@
                                 <div class="burger-logo"></div>
                                 <div class="burger-logo"></div>
                             </li>
-                            <li class="nav__block1-li block1__first-li1 "><img src="/site5/img/Frame1.png" alt="logo"></li>
+                            <li class="nav__block1-li block1__first-li1 "><img src="img/Frame1.png" alt="logo"></li>
                             <li class="nav__block1-li nav__block1-li_hidden">VIDEOS</li>
                             <li class="nav__block1-li nav__block1-li_hidden">ARTISTS</li>
                             <li class="nav__block1-li nav__block1-li_hidden">BLOG</li>
@@ -84,9 +84,9 @@
                             <li class="nav__block2-li nav__block2-li_hidden">YOU'RE AN ARTIST?</li>
                             <li class="nav__block2-li nav__block2-li_hidden">/</li>
                             <li class="nav__block2-li block2__li-5">LOGIN</li>
-                            <li class="nav__block2-li block2__li-logo nav__block2-li_hidden"><img src="/site5/img/Vector.png" alt=""></li>
-                            <li class="nav__block2-li block2__li-logo nav__block2-li_hidden"><img src="/site5/img/Vector-inst.png" alt=""></li>
-                            <li class="nav__block2-li block2__li-logo nav__block2-li_hidden"><img src="/site5/img/Frame-twiter.png" alt=""></li>
+                            <li class="nav__block2-li block2__li-logo nav__block2-li_hidden"><img src="img/Vector.png" alt=""></li>
+                            <li class="nav__block2-li block2__li-logo nav__block2-li_hidden"><img src="img/Vector-inst.png" alt=""></li>
+                            <li class="nav__block2-li block2__li-logo nav__block2-li_hidden"><img src="img/Frame-twiter.png" alt=""></li>
                         </ol>
                     </div>
                 </nav>
@@ -116,7 +116,7 @@
                     </div>
                     <div class="main__section1-block2">
                         <video class="section1__block2-video" autoplay loop >
-                            <source src="/site5/img/LANDING 1.mp4" type="video/mp4">
+                            <source src="img/LANDING 1.mp4" type="video/mp4">
                         </video>
                         <div class="section1__block2-box">
                             <p class="section1__block2-text">
@@ -126,7 +126,7 @@
                     </div>
                     <div class="main__section1-block2">
                         <video class="section1__block2-video" autoplay loop>
-                            <source src="/site5/img/LANDING 2 (1).mp4" type="video/mp4">
+                            <source src="img/LANDING 2 (1).mp4" type="video/mp4">
                         </video>
                         <div class="section1__block2-box">
                             <p class="section1__block2-text">
@@ -158,7 +158,7 @@
                     </div>
                     <div class="main__section1-block2">
                         <video class="section1__block2-video" autoplay loop>
-                            <source src="/site5/img/LANDING 3.mp4" type="video/mp4">
+                            <source src="img/LANDING 3.mp4" type="video/mp4">
                         </video>
                         <div class="section1__block2-box">
                             <p class="section1__block2-text">
@@ -214,10 +214,10 @@
                         </div>
                         <div class="section2__block3">
                             <button class="block3__button-back" type="button">
-                                <img class="next__img" src="/site5/img/назад.png" alt="">
+                                <img class="next__img" src="img/назад.png" alt="">
                             </button>
                             <button class="block3__button-next" type="button">
-                                <img src="/site5/img/вперед.png" alt="">
+                                <img src="img/вперед.png" alt="">
                             </button>
                         </div>
                         
@@ -228,11 +228,11 @@
                         <p class="section3__block-title">SUPPORTED BY</p>
                     </div>
                     <div class="section3__block2">
-                        <img class="section3__block2-img" src="/site5/img/logo.png" alt="">
-                        <img class="section3__block2-img"  src="/site5/img/logo2.png" alt="">
-                        <img class="section3__block2-img"  src="/site5/img/logo3.png" alt="">
-                        <img class="section3__block2-img"  src="/site5/img/logo4.png" alt="">
-                        <img class="section3__block2-img"  src="/site5/img/logo5.png" alt="">
+                        <img class="section3__block2-img" src="img/logo.png" alt="">
+                        <img class="section3__block2-img"  src="img/logo2.png" alt="">
+                        <img class="section3__block2-img"  src="img/logo3.png" alt="">
+                        <img class="section3__block2-img"  src="img/logo4.png" alt="">
+                        <img class="section3__block2-img"  src="img/logo5.png" alt="">
                     </div>
                 </section>
                 <section class="main__section4">
