--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </header>
             <main class="main">
                 <section class="main__section1">
-                    <div class="section1-block1 main__section1-block1">
+                    <div class="section1-block1 main__section1-block1 div-1">
                         <div class="section1-box1">
                             <p class="section1__block1-title">
                                 A UNIQUE WAY TO EXPERIENCE YOUR FAVORITE ARTISTS
@@ -114,7 +114,7 @@
                         </div>
 
                     </div>
-                    <div class="main__section1-block2">
+                    <div class="main__section1-block2 div-2">
                         <video class="section1__block2-video" preload="auto" autoplay loop >
                             <source src="img/LANDING 1.mp4" type="video/mp4">
                         </video>
@@ -124,7 +124,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="main__section1-block2">
+                    <div class="main__section1-block2 div-3">
                         <video class="section1__block2-video" preload="auto" autoplay loop>
                             <source src="img/LANDING 2 (1).mp4" type="video/mp4">
                         </video>
@@ -134,7 +134,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="section1-block2 main__section1-block1">
+                    <div class="section1-block2 main__section1-block1 div-4">
                         <div class="section1-box1" >                           
                             <p class="section1__block1-title">
                                 AN INTERACTIVE AND MEANINGFUL CONNECTION
@@ -145,7 +145,7 @@
                             <button class="section1__block1-button"> Get inspired</button>
                         </div>
                     </div>
-                    <div class="section1-block3 main__section1-block1">
+                    <div class="section1-block3 main__section1-block1 div-5">
                         <div class="section1-box1">
                             <p class="section1__block1-title">
                                 SUPPORT ARTISTS,NOT BIG TECH
@@ -156,7 +156,7 @@
                             <button class="section1__block1-button"> Support artists you love</button>
                         </div>
                     </div>
-                    <div class="main__section1-block2">
+                    <div class="main__section1-block2 div-6">
                         <video class="section1__block2-video" preload="auto" autoplay loop>
                             <source src="img/LANDING 3.mp4" type="video/mp4">
                         </video>
