--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                     </div>
                     <div class="main__section1-block2 div-2">
-                        <video class="section1__block2-video" preload="auto" autoplay loop >
+                        <video class="section1__block2-video" preload="auto" autoplay loop playsinline muted>
                             <source src="img/LANDING 1.mp4" type="video/mp4">
                         </video>
                         <div class="section1__block2-box">
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <div class="main__section1-block2 div-3">
-                        <video class="section1__block2-video" preload="auto" autoplay loop>
+                        <video class="section1__block2-video" preload="auto" autoplay loop playsinline muted>
                             <source src="img/LANDING 2 (1).mp4" type="video/mp4">
                         </video>
                         <div class="section1__block2-box">
@@ -157,7 +157,7 @@
                         </div>
                     </div>
                     <div class="main__section1-block2 div-6">
-                        <video class="section1__block2-video" preload="auto" autoplay loop>
+                        <video class="section1__block2-video" preload="auto" autoplay loop playsinline muted>
                             <source src="img/LANDING 3.mp4" type="video/mp4">
                         </video>
                         <div class="section1__block2-box">
